--- a/index.html
+++ b/index.html
@@ -2,14 +2,14 @@
 <html>
   <head>
     <title>REALPHONE</title>
-    <link rel="stylesheet" href="./real.css" />
+    <link rel="stylesheet" href="./realphone.css" />
   </head>
   <body>
     <header>
       <div class="head">
         <nav>
           <div class="logo">
-            <img src="./../images/left logo.jpeg" />
+            <img src="./images/left logo.jpeg" />
           </div>
           <div class="navbar">
             <ul>
@@ -22,31 +22,31 @@
         </nav>
         <div class="information">
           <div class="overlay"></div>
-          <img src="./../images/mobile.jpeg" class="phone" />
+          <img src="./images/mobile.jpeg" class="phone" />
           <div id="circle">
             <div class="feature one">
-              <img src="./../images/camera.jpeg" />
+              <img src="./images/camera.jpeg" />
               <div>
                 <h1>Display</h1>
                 <p>6.5" Mini-Drop fullscreen</p>
               </div>
             </div>
             <div class="feature two">
-              <img src="./../images/battery.jpeg" />
+              <img src="./images/battery.jpeg" />
               <div>
                 <h1>Battery</h1>
                 <p>5000mAh, 720Hrs Standby</p>
               </div>
             </div>
             <div class="feature three">
-              <img src="./../images/processor.jpeg" />
+              <img src="./images/processor.jpeg" />
               <div>
                 <h1>processor</h1>
                 <p>Snapdragon Octa-core 11nm</p>
               </div>
             </div>
             <div class="feature four">
-              <img src="./../images/circle.jpeg" />
+              <img src="./images/circle.jpeg" />
               <div>
                 <h1>camera</h1>
                 <p>12MP,Wide Angle Lens</p>
@@ -58,9 +58,9 @@
 
 
       <div class="controls">
-         <img src="./../images/arrow.jpeg" id="uparrow">
+         <img src="./images/arrow.jpeg" id="uparrow">
          <h3>Features</h3>
-         <img src="./../images/arrow.jpeg" id="downarrow">
+         <img src="./images/arrow.jpeg" id="downarrow">
       </div>
     </div>
     </header>
